--- a/signup-page/index.html
+++ b/signup-page/index.html
@@ -5,7 +5,29 @@
     <!-- <link rel="stylesheet" href="./src/index.css"> -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Sign Up</title>
+    <style>
+      html, body {
+      height: 100vh;
+      width: 100vw;
+      margin: 0;
+      padding: 0;
+      overflow-x: hidden; /* Prevent horizontal scrolling */
+      display: flex;
+      flex-direction: column;
+      align-items: center; /* Center horizontally */
+      justify-content: center; /* Center vertically */
+      }
+      #root{
+        width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+        /* flex-direction: column; */
+      }
+    </style>
   </head>
   <body  style="background-color: #e1d3fa;">
     <div id="root"></div>
